Bug 1490963: Make main-process network START markers match STOP markers r=mayhemer